Rewrote readme for #6